--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "npm run build:live",
     "build": "tsc -p .",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
+    "clean": "rm -rfv ./dist/*", 
     "test": "jest"
   },
   "repository": {
